# DetectNClassify

./: CMakeLists.txt  README.md  main.cpp  obj.txt
include/: histogram.h  kmean.h  segment.h
src/: histogram.cpp  kmean.cpp  main.cpp  segment.cpp
